--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -38,28 +38,29 @@
                             <li><a href="/LAB/index.html">Lab reports</a></li>
                             <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payment.html">Payments</a></li>
-                            <li><a href="channel_Dr.html">Channeling</a></li>
+                            <li>
+                                <a href="/FrontEnd/channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href=" contact.html ">Contact us</a></li>
                 <!------------------------>
 
                 <li>
-                    <a href="/FEED_BACK/1.html">Feedback</a>
+                    <a href="/FEED_BACK/1.html ">Feedback</a>
                 </li>
 
                 <!---------------------->
-                <li><a href="map.html">Location</a></li>
+                <li><a href="map.html ">Location</a></li>
 
                 <!--        --------------->
                 <li>
-                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-                    <div class="dropdown-menu">
+                    <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
+                    <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="doctor_signup.html">Doctor</a></li>
-                            <li><a href="patient_reg.html ">Patient</a></li>
+                            <li><a href="/FrontEnd/dr_signup.html ">Doctor</a></li>
+                            <li><a href="/FrontEnd/patient_reg.html ">Patient</a></li>
                         </ul>
                     </div>
                 </li>
@@ -68,83 +69,83 @@
     </section>
     <br /><br /><br /><br /><br /><br /><br />
 
-    <div class="container">
-        <form action="/PHP/payment.php" method="POST">
-            <div class="row">
-                <div class="col">
-                    <h3 class="title">billing address</h3>
+    <div class="container ">
+        <form action="/PHP/payment.php " method="POST ">
+            <div class="row ">
+                <div class="col ">
+                    <h3 class="title ">billing address</h3>
 
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Full_name :</span>
-                        <input type="text" placeholder="Kamala Pathirana" />
+                        <input type="text " placeholder="Kamala Pathirana " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Email :</span>
-                        <input type="email" placeholder="example@example.com" />
+                        <input type="email " placeholder="example@example.com " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Address :</span>
-                        <input type="text" placeholder="no. - street" />
+                        <input type="text " placeholder="no. - street " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>City :</span>
-                        <input type="text" placeholder="colombo" />
+                        <input type="text " placeholder="colombo " />
                     </div>
 
-                    <div class="flex">
-                        <div class="inputBox">
+                    <div class="flex ">
+                        <div class="inputBox ">
                             <span>State :</span>
-                            <input type="text" placeholder="Sri Lanka" />
+                            <input type="text " placeholder="Sri Lanka " />
                         </div>
-                        <div class="inputBox">
+                        <div class="inputBox ">
                             <span>zip_code :</span>
-                            <input type="text" placeholder="81 000" />
+                            <input type="text " placeholder="81 000 " />
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <h3 class="title">payment</h3>
+                <div class="col ">
+                    <h3 class="title ">payment</h3>
 
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>cards accepted :</span>
-                        <img src="../Images/img.png" alt="" />
+                        <img src="../Images/img.png " alt=" " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Name_on_card :</span>
-                        <input type="text" placeholder="Mrs. Kamala Pathirana" />
+                        <input type="text " placeholder="Mrs. Kamala Pathirana " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Credit_card_number :</span>
-                        <input type="number" placeholder="1111 2222 3333 4444" />
+                        <input type="number " placeholder="1111 2222 3333 4444 " />
                     </div>
-                    <div class="inputBox">
+                    <div class="inputBox ">
                         <span>Exp_month : </span>
-                        <input type="text" placeholder="march" />
+                        <input type="text " placeholder="march " />
                     </div>
 
-                    <div class="flex">
-                        <div class="inputBox">
+                    <div class="flex ">
+                        <div class="inputBox ">
                             <span>Exp_year :</span>
-                            <input type="number" placeholder="2025" />
+                            <input type="number " placeholder="2025 " />
                         </div>
-                        <div class="inputBox">
+                        <div class="inputBox ">
                             <span>cvv:</span>
-                            <input type="text" placeholder="123" />
+                            <input type="text " placeholder="123 " />
                         </div>
                     </div>
                 </div>
             </div>
 
-            <input type="submit" value="proceed to pay" class="submit-btn" onclick="validate()" />
+            <input type="submit " value="proceed to pay " class="submit-btn " onclick="validate() " />
             <br /><br />
             <center>
                 <p>
-                    <span class="color-red">*</span>&nbsp;Channeling fees will be Rs. 1500.00
+                    <span class="color-red ">*</span>&nbsp;Channeling fees will be Rs. 1500.00
                 </p>
             </center>
         </form>
         <!--link to js--->
-        <script type="text/javascript " src="/JS/payment.js"></script>
+        <script type="text/javascript " src="/JS/payment.js "></script>
     </div>
 </body>
 
