--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>payment</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" />
-    <link rel="stylesheet" href="payment.css">
-    <link rel="text/javascript" href="payment.js">
+    <link rel="stylesheet" href="/CSS/payment.css">
+    <link rel="text/javascript" href="/JS/payment.js">
 </head>
 
 <body>
